--- a/css/layout.css
+++ b/css/layout.css
@@ -133,8 +133,8 @@
     margin-left: 17.5rem;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    min-height: 100dvh;
+    height: 100vh;
+    height: 100dvh;
     background: transparent;
     /* This is the scroll container - needed for sticky to work */
     overflow-y: auto;
