--- a/css/layout.css
+++ b/css/layout.css
@@ -328,7 +328,7 @@
     }
 
     .page-container {
-        padding: 1rem;
+        padding: 6rem 1rem 1rem 1rem;
     }
 
     /* Tighter padding for mobile cards */
